--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,15 @@
     "@mui/material": "^5.15.20",
     "6pp": "^1.2.16",
     "chart.js": "^4.4.3",
+    "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
